tests/idris2/coverage010/expected
1/1: Building casetot (casetot.idr)
Error: main is not covering.

casetot.idr:12:1--12:13
    |
 12 | main : IO ()
    | ^^^^^^^^^^^^

Calls non covering function Main.case block in case block in main
